[package]
name = "rui"
version = "0.0.1"
repository = "https://github.com/enex/rust_gui.git"
license = "LGPL-3.0"
license = "LGPL"
authors = ["enex <sive@web.de>"]
keywords = ["graphics", "ui", "2d"]
readme = "README.md"
homepage = "https://github.com/enex/rust_gui"
description = "reactiv rust ui  a ReactJS like UI library"

[dependencies]
glutin = "*"
gl = "*"
nanovg = "*"

[dependencies.nanovg]
git = "https://github.com/enex/nanovg-rs.git"
version = "0.2.0"
